fix videojs player break on state Changes
Removed the .dispose call from videojs, and added test component directly to etsy edit page.

--- a/src/components/templates/EtsySimpleEditHero/EtsySimpleEditHero.css
+++ b/src/components/templates/EtsySimpleEditHero/EtsySimpleEditHero.css
@@ -76,7 +76,7 @@ form-container left-items top-items h2 span {
 
 
 
-form-container left-items center-card{
+form-container left-items left-center-card{
 
     width: 486px;
     height: 590px;
